# winpbcopy

./: .cz.json  .gitignore  .prettierignore  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  Doxyfile.in  LICENSE.txt  README.md  package.json  pbcopy.c  pbpaste.c  vcpkg.json
.claude/agents/: regen.md  release.md
.claude/skills/ci/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  publish-msys2.yml  publish-winget.yml  qa.yml  tests.yml
man/: pbcopy.1  pbpaste.1
src/: CMakeLists.txt  decls.h  macros.h  pbcopy.c  pbcopy_main.c  pbpaste.c  pbpaste_main.c  test.c
